TUTORIAL-feat-42a15: Alpha version of tutorial

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -5,7 +5,7 @@
 <!-- DEFINE $NAVBAR_CLASS = '' -->
 <!-- ENDIF -->
 
-<!-- IF ! PLAYER_OPTION_TUTORIAL_DISABLED -->
+<!-- IF TUTORIAL_ENABLED -->
   <!-- INCLUDE tutorial -->
 <!-- ENDIF -->
 
