--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -330,6 +330,14 @@
               <label for="PLAYER_OPTION_TUTORIAL_WINDOWED">{L_PLAYER_OPTION_TUTORIAL_WINDOWED}</label>
             </td>
           </tr>
+
+          <tr>
+            <td class="c_l">
+              <input type="hidden" name="options[{D_PLAYER_OPTION_TUTORIAL_CURRENT}]" value="{PLAYER_OPTION_TUTORIAL_CURRENT}" />
+              <input type="checkbox" id="PLAYER_OPTION_TUTORIAL_CURRENT" name="options[{D_PLAYER_OPTION_TUTORIAL_CURRENT}]" value="1" />
+              <label for="PLAYER_OPTION_TUTORIAL_CURRENT">{L_PLAYER_OPTION_TUTORIAL_CURRENT}</label>
+            </td>
+          </tr>
         </table>
       </div>
 
