--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -3338,3 +3338,45 @@ td[go]:hover { /* Skin specific */
 td.error_message {
   background-color: #415680;
 }
+
+
+
+#tutorial_block {
+  /*display: none;*/
+}
+#tutorial_container {
+  padding: 0.5em;
+  max-width: 40em;
+  min-width: 40em;
+  display: inline-block;
+}
+#tutorial_header {
+  padding: 0.5em;
+  font-size: 130%;
+}
+#tutorial_text {
+  padding: 0.5em;
+  text-align: justify;
+}
+#tutorial_text_adviser {
+  float: left;
+}
+#tutorial_text::after {
+  clear: both;
+}
+#tutorial_buttons {
+  padding: 0.5em;
+  text-align: center;
+  /*border: 1px solid white;*/
+}
+#tutorial_button_next {
+  margin-left: auto;
+}
+#tutorial_button_window {
+  margin: 0 auto;
+}
+#tutorial_button_close {
+}
+#tutorial_footer {
+  padding: 0.5em;
+}
