--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -334,7 +334,7 @@
           <tr>
             <td class="c_l">
               <input type="hidden" name="options[{D_PLAYER_OPTION_TUTORIAL_CURRENT}]" value="{PLAYER_OPTION_TUTORIAL_CURRENT}" />
-              <input type="checkbox" id="PLAYER_OPTION_TUTORIAL_CURRENT" name="options[{D_PLAYER_OPTION_TUTORIAL_CURRENT}]" value="1" />
+              <input type="checkbox" id="PLAYER_OPTION_TUTORIAL_CURRENT" name="options[{D_PLAYER_OPTION_TUTORIAL_CURRENT}]" value="{C_tutorial_first_item}" />
               <label for="PLAYER_OPTION_TUTORIAL_CURRENT">{L_PLAYER_OPTION_TUTORIAL_CURRENT}</label>
             </td>
           </tr>
