--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -50,7 +50,7 @@
     </script>
 
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery.js?{C_var_db_update}"></script>
-    <!--<script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/fm.checkator.jquery.js?{C_var_db_update}"></script>-->
+    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/js.cookie.js?{C_var_db_update}"></script>
     <script type="text/javascript">
       var SN_SOUND_ENABLED = parseInt('{SOUND_ENABLED}') ? parseInt('{SOUND_ENABLED}') : 0;
       var PLAYER_OPTION_ANIMATION_DISABLED = parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') ? parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') : 0;
