TUTORIAL-misc-42a18: Localized JS text

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -323,13 +323,13 @@
             </td>
           </tr>
 
-          <tr>
-            <td class="c_l">
-              <input type="hidden" name="options[{D_PLAYER_OPTION_TUTORIAL_WINDOWED}]" value="0" />
-              <input type="checkbox" id="PLAYER_OPTION_TUTORIAL_WINDOWED" name="options[{D_PLAYER_OPTION_TUTORIAL_WINDOWED}]" value="1"<!-- IF PLAYER_OPTION_TUTORIAL_WINDOWED --> checked<!-- ENDIF --> />
-              <label for="PLAYER_OPTION_TUTORIAL_WINDOWED">{L_PLAYER_OPTION_TUTORIAL_WINDOWED}</label>
-            </td>
-          </tr>
+          <!--<tr>-->
+            <!--<td class="c_l">-->
+              <!--<input type="hidden" name="options[{D_PLAYER_OPTION_TUTORIAL_WINDOWED}]" value="0" />-->
+              <!--<input type="checkbox" id="PLAYER_OPTION_TUTORIAL_WINDOWED" name="options[{D_PLAYER_OPTION_TUTORIAL_WINDOWED}]" value="1"&lt;!&ndash; IF PLAYER_OPTION_TUTORIAL_WINDOWED &ndash;&gt; checked&lt;!&ndash; ENDIF &ndash;&gt; />-->
+              <!--<label for="PLAYER_OPTION_TUTORIAL_WINDOWED">{L_PLAYER_OPTION_TUTORIAL_WINDOWED}</label>-->
+            <!--</td>-->
+          <!--</tr>-->
 
           <tr>
             <td class="c_l">
