NEWS-misc-42a20.1: Reworked survey result output to not overlap with popups

--- a/design/templates/OpenGame/news_list.tpl.html
+++ b/design/templates/OpenGame/news_list.tpl.html
@@ -63,13 +63,11 @@
           <tr>
             <td colspan="2">
               <div class="survey_votes">
+                <div class="survey_votes_bar ok_bg" style="width: {survey_votes.PERCENT}%;"></div>
                 <div class="survey_votes_text">
                   {survey_votes.TEXT}
                 </div>
 
-                <div class="survey_votes_bar ok_bg" style="width: {survey_votes.PERCENT}%;">
-                  &nbsp;
-                </div>
                 <div class="survey_votes_percent">
                   {survey_votes.PERCENT_TEXT}%
                 </div>
