--- a/design/css/global.css
+++ b/design/css/global.css
@@ -378,3 +378,11 @@ body.blitz_ {
   width: 1.454545em;
   height: 1.454545em;
 }
+
+.underline {
+  text-decoration: underline;
+}
+
+.strike {
+  text-decoration: line-through;
+}
