ADMIN-feat-42a20.21: PTL test page (incomplete)

--- a/design/templates/OpenGame/admin/admin_tools.tpl.html
+++ b/design/templates/OpenGame/admin/admin_tools.tpl.html
@@ -6,4 +6,5 @@
   <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_MD5}">{L_adm_tool_md5_header}</a></th></tr>
   <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_LAST}">{L_adm_update_repeat}</a></th></tr>
   <tr><th><a href="admin/tools.php?mode={D_ADM_TOOL_FORCE_ALL}">{L_adm_update_force}</a></th></tr>
+  <tr><th><a href="admin/tools.php?mode={D_ADM_PTL_TEST}">{L_adm_ptl_test}</a></th></tr>
 </table>
