--- a/design/templates/OpenGame/navbar_resources_horizontal.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_horizontal.tpl.html
@@ -1,3 +1,4 @@
+<table class="border_image_small" id="navbar_resources">
 <tr class="c_l">
   <th nowrap><!-- IF SN_IN_ALLY -->{L_sys_alliance}<!-- ELSE -->{L_sys_resources}<!-- ENDIF --></th>
   <th>{L_sys_metal}</th>
@@ -41,3 +42,4 @@
   <td>-</td>
 </tr>
 <!-- ENDIF -->
+</table>
