--- a/design/css/global.css
+++ b/design/css/global.css
@@ -386,3 +386,12 @@ body.blitz_ {
 .strike {
   text-decoration: line-through;
 }
+
+.no_select {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+}
