--- a/design/templates/OpenGame/navbar_resources.tpl.html
+++ b/design/templates/OpenGame/navbar_resources.tpl.html
@@ -1,31 +1,65 @@
 <!-- navbar_resources BOF -->
 
-<!-- IF $IN_NAVBAR && PLAYER_OPTION_NAVBAR_PLANET_VERTICAL -->
+<!-- IF $IN_NAVBAR && PLAYER_OPTION_NAVBAR_PLANET_VERTICAL && 0 -->
   <!-- INCLUDE navbar_resources_vertical -->
+<!-- ELSEIF 1 -->
+  <!-- INCLUDE navbar_resources_flex -->
 <!-- ELSE -->
   <!-- INCLUDE navbar_resources_horizontal -->
 <!-- ENDIF -->
 
-
 <script type="text/javascript">
-  sn_timers.unshift({id: 'top_metal', type: TIMER_COUNTER, options: {
-    start_value: {PLANET_METAL},
-    per_second: {PLANET_METAL_PERHOUR} / 3600,
-    max_value: {PLANET_METAL_MAX},
-    round: {RESOURCE_ROUNDING}
-  }});
-  sn_timers.unshift({id: 'top_crystal', type: TIMER_COUNTER, options: {
-    start_value: {PLANET_CRYSTAL},
-    per_second: {PLANET_CRYSTAL_PERHOUR} / 3600,
-    max_value: {PLANET_CRYSTAL_MAX},
-    round: {RESOURCE_ROUNDING}}
-  });
-  sn_timers.unshift({id: 'top_deuterium', type: TIMER_COUNTER, options: {
-    start_value: {PLANET_DEUTERIUM},
-    per_second: {PLANET_DEUTERIUM_PERHOUR} / 3600,
-    max_value: {PLANET_DEUTERIUM_MAX},
-    round: {RESOURCE_ROUNDING}
-  }});
+  var navbarResources = {
+    "metal": {
+      start_value: Math.floatVal('{PLANET_METAL}'),
+      per_second: Math.floatVal('{PLANET_METAL_PERHOUR}' / 3600),
+      max_value: Math.intVal('{PLANET_METAL_MAX}'),
+      round: Math.intVal('{RESOURCE_ROUNDING}'),
+      resourceNameLongId: 'sys_metal'
+    },
+    "crystal": {
+      start_value: Math.floatVal('{PLANET_CRYSTAL}'),
+      per_second: Math.floatVal('{PLANET_CRYSTAL_PERHOUR}' / 3600),
+      max_value: Math.intVal('{PLANET_CRYSTAL_MAX}'),
+      round: Math.intVal('{RESOURCE_ROUNDING}'),
+      resourceNameLongId: 'sys_crystal'
+    },
+    "deuterium": {
+      start_value: Math.floatVal('{PLANET_DEUTERIUM}'),
+      per_second: Math.floatVal('{PLANET_DEUTERIUM_PERHOUR}' / 3600),
+      max_value: Math.intVal('{PLANET_DEUTERIUM_MAX}'),
+      round: Math.intVal('{RESOURCE_ROUNDING}'),
+      resourceNameLongId: 'sys_deuterium'
+    },
+    "energy": {
+      start_value: Math.floatVal('{PLANET_ENERGY}'),
+      max_value: Math.floatVal('{ENERGY_MAX_NUMBER}'),
+      resourceNameLongId: 'sys_energy'
+    }
+  };
+
+//  $.extend(navbarResources.metal, {
+//    start_value: 0.99,
+//    per_second: 3600 / 3600,
+//    max_value: 100,
+//    round: 0
+//  });
+//  $.extend(navbarResources.crystal, {
+//    start_value: 0.99,
+//    per_second: 3600 / 3600,
+//    max_value: 100,
+//    round: 0
+//  });
+//  $.extend(navbarResources.deuterium, {
+//    start_value: 0.99,
+//    per_second: 3600 / 3600,
+//    max_value: 100,
+//    round: 0
+//  });
+
+  sn_timers.unshift({id: 'top_metal', type: TIMER_COUNTER, options: navbarResources.metal});
+  sn_timers.unshift({id: 'top_crystal', type: TIMER_COUNTER, options: navbarResources.crystal});
+  sn_timers.unshift({id: 'top_deuterium', type: TIMER_COUNTER, options: navbarResources.deuterium});
 </script>
 
 <!-- navbar_resources EOF -->
