NAVBAR-misc-42a21.3: Back compatibility with old planetbars

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -289,7 +289,9 @@
       <!-- ENDIF -->
     </div>
 
-    <!-- IF SN_RENDER_NAVBAR_PLANET -->
+    <!-- DEFINE $NAVBAR_PLANET_FLEX = 0 -->
+
+    <!-- IF SN_RENDER_NAVBAR_PLANET && $NAVBAR_PLANET_FLEX -->
     <!-- DEFINE $IN_NAVBAR = 1 -->
     <div>
       <!-- INCLUDE navbar_resources -->
@@ -298,13 +300,15 @@
     <!-- ENDIF -->
   </div>
 
-  <!--&lt;!&ndash; IF SN_RENDER_NAVBAR_PLANET &ndash;&gt;-->
-    <!--&lt;!&ndash; DEFINE $IN_NAVBAR = 1 &ndash;&gt;-->
-    <!--<div>-->
-      <!--&lt;!&ndash; INCLUDE navbar_resources &ndash;&gt;-->
-    <!--</div>-->
-    <!--&lt;!&ndash; DEFINE $IN_NAVBAR = 0 &ndash;&gt;-->
-  <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
+  <!-- IF SN_RENDER_NAVBAR_PLANET && ! $NAVBAR_PLANET_FLEX-->
+    <!-- DEFINE $IN_NAVBAR = 1 -->
+    <div>
+      <table class="border_image_small" id="navbar_resources">
+      <!-- INCLUDE navbar_resources -->
+      </table>
+    </div>
+    <!-- DEFINE $IN_NAVBAR = 0 -->
+  <!-- ENDIF -->
 </div>
 
 <div id="navbar_refresh" class="button_pseudo" onclick="document.location.reload(true);">{L_topnav_refresh_page}</div>
