--- a/design/templates/OpenGame/navbar_resources_flex.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_flex.tpl.html
@@ -1,3 +1,5 @@
+<!-- DEFINE $PLANETBAR_VERTICAL = 1 -->
+
 <div id="navbar_resource_flex_tooltip_pattern">
   <table class="no_border_image">
     <tr class="c_c no_select">
@@ -77,7 +79,7 @@
       </div>
       <!-- ELSE -->
       <!--<div class="navbar_resources_flex_resource cell" data-resource="energy">-->
-      <div class="cell navbar_resources_flex_resource flexible_wrapper">
+      <div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="energy">
         <div>{L_sys_energy_sh}</div>
 
         <div>
