NAVBAR-feat-42a21.7: New planetbar now is default one. Option to turn old planetbar on. Added resource icons to new planetbar

--- a/design/templates/OpenGame/navbar_resources.tpl.html
+++ b/design/templates/OpenGame/navbar_resources.tpl.html
@@ -1,6 +1,6 @@
 <!-- navbar_resources BOF -->
 <!-- IF $IN_NAVBAR  -->
-  <!-- IF $NAVBAR_PLANET_FLEX -->
+  <!-- IF ! PLAYER_OPTION_NAVBAR_PLANET_OLD -->
     <!-- INCLUDE navbar_resources_flex -->
   <!-- ELSE -->
     <!-- IF PLAYER_OPTION_NAVBAR_PLANET_VERTICAL -->
