--- a/design/templates/OpenGame/navbar_resources_flex.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_flex.tpl.html
@@ -32,7 +32,7 @@
   <div class="flexible_wrapper wrap">
     <div class="flexible_wrapper">
       <div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="metal">
-        <div>{L_sys_metal_sh}</div>
+        <div><img class="image_close" src="design/images/icon_metal.png" /></div>
         <div>
           <div id="top_metal">
             {PLANET_METAL_TEXT}
@@ -44,7 +44,7 @@
       </div>
 
       <div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="crystal">
-        <div>{L_sys_crystal_sh}</div>
+        <div><img class="image_close" src="design/images/icon_crystal.png" /></div>
 
         <div>
           <div id='top_crystal'>
@@ -59,7 +59,7 @@
 
     <div class="flexible_wrapper">
       <div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="deuterium">
-        <div>{L_sys_deuterium_sh}</div>
+        <div><img class="image_close" src="design/images/icon_deuterium.png" /></div>
 
         <div>
           <div id='top_deuterium'>{PLANET_DEUTERIUM_TEXT}</div>
@@ -71,16 +71,15 @@
 
       <!-- IF SN_IN_ALLY -->
       <div class="cell navbar_resources_flex_resource flexible_wrapper">
-        <div>{L_sys_dark_matter_sh}</div>
+        <div><img class="image_close" src="design/images/icon_dark_matter.png" /></div>
 
         <div>
           <div id='top_dark_matter'>{DARK_MATTER_TEXT}</div>
         </div>
       </div>
       <!-- ELSE -->
-      <!--<div class="navbar_resources_flex_resource cell" data-resource="energy">-->
       <div class="cell navbar_resources_flex_resource flexible_wrapper" data-resource="energy">
-        <div>{L_sys_energy_sh}</div>
+        <div><img class="image_close" src="design/images/icon_energy.png" /></div>
 
         <div>
           <div>{ENERGY_BALANCE}</div>
