--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -435,6 +435,13 @@
               <label for="PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER">{L_PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER}</label>
             </td>
           </tr>
+          <tr>
+            <td class="c_l" colspan="2">
+              <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_OLD}]" value="0" />
+              <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_OLD}]" value="1" id="PLAYER_OPTION_NAVBAR_PLANET_OLD" <!-- IF PLAYER_OPTION_NAVBAR_PLANET_OLD -->checked="checked" <!-- ENDIF -->/>
+              <label for="PLAYER_OPTION_NAVBAR_PLANET_OLD">{L_PLAYER_OPTION_NAVBAR_PLANET_OLD}</label>
+            </td>
+          </tr>
         </table>
       </div>
 
