--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -295,9 +295,7 @@
     </div>
     </div>
 
-    <!-- DEFINE $NAVBAR_PLANET_FLEX = 0 -->
-
-    <!-- IF SN_RENDER_NAVBAR_PLANET && $NAVBAR_PLANET_FLEX -->
+    <!-- IF SN_RENDER_NAVBAR_PLANET && ! PLAYER_OPTION_NAVBAR_PLANET_OLD -->
     <!-- DEFINE $IN_NAVBAR = 1 -->
     <div id="navbar_resbar_wrapper">
       <!-- INCLUDE navbar_resources -->
@@ -306,7 +304,7 @@
     <!-- ENDIF -->
   </div>
 
-  <!-- IF SN_RENDER_NAVBAR_PLANET && ! $NAVBAR_PLANET_FLEX-->
+  <!-- IF SN_RENDER_NAVBAR_PLANET && PLAYER_OPTION_NAVBAR_PLANET_OLD-->
     <!-- DEFINE $IN_NAVBAR = 1 -->
     <div>
       <table class="border_image_small" id="navbar_resources">
