--- a/design/templates/OpenGame/navbar_resources_vertical.tpl.html
+++ b/design/templates/OpenGame/navbar_resources_vertical.tpl.html
@@ -1,7 +1,7 @@
   <tr class="c_l">
     <th nowrap><!-- IF SN_IN_ALLY -->{L_sys_alliance}<!-- ELSE -->{L_sys_resources}<!-- ENDIF --></th>
     <th class="c_l" nowrap>{L_tech_storage}</th>
-    <!-- IF ! SN_IN_ALLY -->
+    <!-- IF ! SN_IN_ALLY && PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->
     <th class="c_l" nowrap>{L_tech_storage_max}</th>
     <!-- ENDIF -->
     <!-- IF ! SN_NAVBAR_HIDE_FLEETS -->
@@ -12,7 +12,7 @@
   <tr class="c_r">
     <th class="c_l">{L_sys_metal}</th>
     <td id='top_metal'>{PLANET_METAL_TEXT}</td>
-    <!-- IF ! SN_IN_ALLY -->
+    <!-- IF ! SN_IN_ALLY && PLAYER_OPTION_NAVBAR_PLANET_STORAGE  -->
     <td>{PLANET_METAL_MAX_TEXT}</td>
     <!-- ENDIF -->
     <!-- IF ! SN_NAVBAR_HIDE_FLEETS -->
@@ -23,7 +23,7 @@
   <tr class="c_r">
     <th class="c_l">{L_sys_crystal}</th>
     <td id='top_crystal'>{PLANET_CRYSTAL_TEXT}</td>
-    <!-- IF ! SN_IN_ALLY -->
+    <!-- IF ! SN_IN_ALLY  && PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->
     <td>{PLANET_CRYSTAL_MAX_TEXT}</td>
     <!-- ENDIF -->
     <!-- IF ! SN_NAVBAR_HIDE_FLEETS -->
@@ -34,7 +34,7 @@
   <tr class="c_r">
     <th class="c_l">{L_sys_deuterium}</th>
     <td id='top_deuterium'>{PLANET_DEUTERIUM_TEXT}</td>
-    <!-- IF ! SN_IN_ALLY -->
+    <!-- IF ! SN_IN_ALLY  && PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->
     <td>{PLANET_DEUTERIUM_MAX_TEXT}</td>
     <!-- ENDIF -->
     <!-- IF ! SN_NAVBAR_HIDE_FLEETS -->
@@ -45,18 +45,15 @@
   <tr class="c_r">
     <!-- IF SN_IN_ALLY -->
     <th class="c_l">{L_sys_dark_matter}</th>
-    <!-- ELSE -->
-    <th<!-- IF ! SN_NAVBAR_HIDE_FLEETS --> colspan="2"<!-- ENDIF -->>{L_sys_energy}</th>
-    <!-- ENDIF -->
-
-    <!-- IF SN_IN_ALLY -->
     <td id='top_dark_matter'>{DARK_MATTER_TEXT}</td>
     <!-- ELSE -->
+    <th<!-- IF ! SN_NAVBAR_HIDE_FLEETS --> colspan="2"<!-- ENDIF -->>{L_sys_energy}</th>
     <td>{ENERGY_BALANCE}</td>
-    <!-- ENDIF -->
-    <!-- IF ! SN_IN_ALLY -->
+    <!-- IF PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->
     <td>{ENERGY_MAX}</td>
     <!-- ENDIF -->
+    <!-- ENDIF -->
+
     <!-- IF ! SN_NAVBAR_HIDE_FLEETS -->
     <td>-</td>
     <!-- ENDIF -->
