--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -352,6 +352,12 @@
           <tr>
             <th class="c_j" colspan="2">{L_opt_navbar_description}</th>
           </tr>
+
+          <tr>
+            <th class="c_c" colspan="2">
+              {L_opt_navbar_resourcebar_description}
+            </th>
+          </tr>
           <!-- IF .options_3 -->
           <!-- BEGIN options_3 -->
           <!-- IF options_3.NAME == 'opt_int_navbar_resource_force' -->
@@ -378,6 +384,26 @@
               <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_VERTICAL}]" value="1" id="PLAYER_OPTION_NAVBAR_PLANET_VERTICAL" <!-- IF PLAYER_OPTION_NAVBAR_PLANET_VERTICAL -->checked="checked" <!-- ENDIF -->/>
               <label for="PLAYER_OPTION_NAVBAR_PLANET_VERTICAL">{L_PLAYER_OPTION_NAVBAR_PLANET_VERTICAL}</label>
             </td>
+          </tr>
+          <tr>
+            <td class="c_l" colspan="2">
+              <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_STORAGE}]" value="0" />
+              <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_STORAGE}]" value="1" id="PLAYER_OPTION_NAVBAR_PLANET_STORAGE" <!-- IF PLAYER_OPTION_NAVBAR_PLANET_STORAGE -->checked="checked" <!-- ENDIF -->/>
+              <label for="PLAYER_OPTION_NAVBAR_PLANET_STORAGE">{L_PLAYER_OPTION_NAVBAR_PLANET_STORAGE}</label>
+            </td>
+          </tr>
+          <tr>
+            <td class="c_l" colspan="2">
+              <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_OLD}]" value="0" />
+              <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_OLD}]" value="1" id="PLAYER_OPTION_NAVBAR_PLANET_OLD" <!-- IF PLAYER_OPTION_NAVBAR_PLANET_OLD -->checked="checked" <!-- ENDIF -->/>
+              <label for="PLAYER_OPTION_NAVBAR_PLANET_OLD">{L_PLAYER_OPTION_NAVBAR_PLANET_OLD}</label>
+            </td>
+          </tr>
+
+          <tr>
+            <th class="c_c" colspan="2">
+              {L_opt_navbar_buttons_title}
+            </th>
           </tr>
           <tr>
             <td class="c_l" colspan="2">
@@ -433,13 +459,6 @@
               <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER}]" value="0" />
               <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER}]" value="1" id="PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER" <!-- IF PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER -->checked="checked" <!-- ENDIF -->/>
               <label for="PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER">{L_PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER}</label>
-            </td>
-          </tr>
-          <tr>
-            <td class="c_l" colspan="2">
-              <input type="hidden" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_OLD}]" value="0" />
-              <input type="checkbox" name="options[{D_PLAYER_OPTION_NAVBAR_PLANET_OLD}]" value="1" id="PLAYER_OPTION_NAVBAR_PLANET_OLD" <!-- IF PLAYER_OPTION_NAVBAR_PLANET_OLD -->checked="checked" <!-- ENDIF -->/>
-              <label for="PLAYER_OPTION_NAVBAR_PLANET_OLD">{L_PLAYER_OPTION_NAVBAR_PLANET_OLD}</label>
             </td>
           </tr>
         </table>
